--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Acme|Amaranth|Salsa');
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
 body{
-  transition: all 0.1s;
+  transition: all 0.2s;
 }
-.App {
-  text-align: center;
-}
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-} 
 .navbar{
   position:fixed;
   width:100%;
@@ -36,6 +29,82 @@ body{
 	font-size:35px;
 	margin-top:13px;
 }
+
+.scroller__inner img{
+max-width:300px;
+max-height:200px;
+}
+
+.scroller {
+  text-transform: capitalize;
+  max-width: 100vw;
+}
+
+.scroller__inner {
+  padding-block: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.scroller[data-animated="true"] {
+  overflow: hidden;
+  -webkit-mask: linear-gradient(
+    90deg,
+    transparent,
+    white 5%,
+    white 90%,
+    transparent
+  );
+  mask: linear-gradient(90deg, transparent, white 20%, white 80%, transparent);
+}
+
+.scroller[data-animated="true"] .scroller__inner {
+  width: max-content;
+  flex-wrap: nowrap;
+  animation: scroll var(--_animation-duration, 30s)
+    var(--_animation-direction, forwards) linear infinite;
+}
+
+.scroller[data-direction="right"] {
+  --_animation-direction: reverse;
+}
+
+.scroller[data-direction="left"] {
+  --_animation-direction: forwards;
+}
+
+.scroller[data-speed="fast"] {
+  --_animation-duration: 30s;
+}
+
+.scroller[data-speed="slow"] {
+  --_animation-duration: 30s;
+}
+
+@keyframes scroll {
+  to {
+    transform: translate(calc(-50% - 0.5rem));
+  }
+}
+
+
+@media(max-width:1024px){
+  .scroller__inner img{
+    max-width:200px;
+    max-height:175px;
+    }
+  .home h1{
+      font-size: 50px;
+  }
+  .home h2{
+      font-size: 25px;
+  }
+  .home p{
+      font-size: 16px;
+ }
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
