--- a/src/App.css
+++ b/src/App.css
@@ -15,15 +15,33 @@ body{
 }
 .float{
 	position:fixed;
-	width:60px;
-	height:60px;
-	bottom:40px;
+	width:40px;
+	height:40px;
+	bottom:90px;
 	right:10px;
+  font-size: x-large;
 	background-color:#222;
 	color:#FFF;
 	border-radius:50px;
 	text-align:center;
    box-shadow: 0px 0px 10px white;
+}
+
+.float2{
+	position:fixed;
+	width:40px;
+	height:40px;
+	bottom:10px;
+	right:10px;
+  font-size: x-large;
+	background-color:#222;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+   box-shadow: 0px 0px 10px white;
+}
+.float,.float2{
+  z-index:100;
 }
 .my-float{
 	font-size:35px;
