--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,14 @@
 @import url('https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css');
 @import url('https://fonts.googleapis.com/css?family=Acme|Amaranth|Salsa');
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css");
+
 :root {
   --padding: 0;
   --margin: 0;
   --scroll-behavior: smooth;
   --gradient: linear-gradient(to left top, #dd2476 10%, #ff512f 90%) !important;
 }
+
 * {
   padding: 0;
   margin: 0;
@@ -216,7 +218,7 @@ transition: all 1s;
   animation: pulse2 3s ease-in-out infinite;
   animation-play-state: paused;
 }
-.download-btn span:hover,.modeball:hover{
+.download-btn span:hover{
   animation-play-state: running;
 }
 .download-btn{
