--- a/src/App.css
+++ b/src/App.css
@@ -21,24 +21,26 @@ body{
 	right:10px;
   font-size: x-large;
 	background-color:#222;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 	color:#FFF;
-	border-radius:50px;
-	text-align:center;
-   box-shadow: 0px 0px 10px white;
+	border-radius:100%;
+  box-shadow: 0px 0px 10px white;
 }
 
 .float2{
 	position:fixed;
-	width:40px;
-	height:40px;
+	width:30px;
+	height:30px;
 	bottom:10px;
 	right:10px;
   font-size: x-large;
 	background-color:#222;
 	color:#FFF;
-	border-radius:50px;
+	border-radius:100%;
 	text-align:center;
-   box-shadow: 0px 0px 10px white;
+  box-shadow: 0px 0px 10px white;
 }
 .float,.float2{
   z-index:100;
