--- a/src/components/ChatBot.css
+++ b/src/components/ChatBot.css
@@ -71,7 +71,7 @@
   @media(max-width:786px){
     .chatbot-container {
         width: 100%;
-        height: 100vh;
+        height: 100dvh;
         max-width: 100vw;
     }
   }
